--- a/configs/grafana/provisioning/dashboards/dashboards.yml
+++ b/configs/grafana/provisioning/dashboards/dashboards.yml
@@ -7,7 +7,7 @@ providers:
   - name: 'default'
     orgId: 1
     folder: 'Service Feature'
-    folderUid: 'service-feature'
+    folderUid: 'builder'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 30
